@@ -21,8 +21,22 @@ ${PRG_DBG}:	$(OBJ_DBG) $(LIBSDEP)
 ${PRG_STLDBG}:	$(OBJ_STLDBG) $(LIBSDEP)
 	$(LINK.cc) $(LINK_OUTPUT_OPTION) ${START_OBJ} $(OBJ_STLDBG) $(LDLIBS) ${STDLIBS} ${END_OBJ}
 
+endif
+
+ifeq (CC, $(COMPILER_NAME))
+
+${PRG}:	$(OBJ) $(LIBSDEP)
+	$(LINK.cc) $(LINK_OUTPUT_OPTION) ${START_OBJ} $(OBJ) $(LDLIBS) ${STDLIBS} ${END_OBJ}
+
+${PRG_DBG}:	$(OBJ_DBG) $(LIBSDEP)
+	$(LINK.cc) $(LINK_OUTPUT_OPTION) ${START_OBJ} $(OBJ_DBG) $(LDLIBS) ${STDLIBS} ${END_OBJ}
+
+${PRG_STLDBG}:	$(OBJ_STLDBG) $(LIBSDEP)
+	$(LINK.cc) $(LINK_OUTPUT_OPTION) ${START_OBJ} $(OBJ_STLDBG) $(LDLIBS) ${STDLIBS} ${END_OBJ}
+
 else
 
+ifneq (gcc, $(COMPILER_NAME))
 # Original Borland and Digital Mars linkers
 
 ${PRG}:	$(OBJ) $(LIBSDEP)
@@ -34,6 +48,7 @@ ${PRG_DBG}:	$(OBJ_DBG) $(LIBSDEP)
 ${PRG_STLDBG}:	$(OBJ_STLDBG) $(LIBSDEP)
 	$(LINK.cc) $(subst /,\,$(START_OBJ) $(OBJ_STLDBG) $(END_OBJ),$(LINK_OUTPUT_OPTION),$(MAP_OUTPUT_OPTION),$(LDLIBS) $(STDLIBS),,)
 
+endif
 endif
 
 
